--- a/_publications/2021-01-03-lau2021quantum.md
+++ b/_publications/2021-01-03-lau2021quantum.md
@@ -2,7 +2,7 @@
 title: "Quantum assisted simulation of time dependent Hamiltonians"
 collection: publications
 permalink: /publication/lau2021quantum
-date: Arxiv prepint published in 2021
+date: 2021-01-03
 venue: 'Preprint on Arxiv'
 paperurl: 'https://arxiv.org/pdf/2101.07677.pdf'
 ---
