--- a/_publications/2021-01-01-hue2020fourth.md
+++ b/_publications/2021-01-01-hue2020fourth.md
@@ -2,7 +2,7 @@
 title: "Fourth-order leapfrog algorithms for numerical time evolution of classical and quantum systems"
 collection: publications
 permalink: /publication/hue2020fourth
-date: Arxiv prepint published in 2020
+date: 2021-01-01
 venue: 'Preprint on Arxiv'
 paperurl: 'https://arxiv.org/pdf/2007.05308.pdf'
 ---
