--- a/_teaching/2021-01-02-PC4241-tutor.md
+++ b/_teaching/2021-01-02-PC4241-tutor.md
@@ -3,8 +3,8 @@ title: "Graduate Teaching Assistant"
 collection: teaching
 type: "Undergraduate Statistical Mechanics Course"
 permalink: /teaching/PC4241-tutor
-venue: "National University of Singapore, Department of Physics"
-date: 2021 - Present
+venue: "National University of Singapore, Department of Physics, 2021 - Present"
+date: 2020-01-01
 location: "Singapore"
 ---
 
