--- a/_publications/2021-01-04-lau2021nisq.md
+++ b/_publications/2021-01-04-lau2021nisq.md
@@ -2,7 +2,7 @@
 title: "NISQ algorithm for hamiltonian simulation via truncated taylor series"
 collection: publications
 permalink: /publication/lau2021nisq
-date: 'Arxiv prepint published in 2021'
+date: 2021-01-04
 venue: 'Preprint on Arxiv'
 paperurl: 'https://arxiv.org/pdf/2103.05500.pdf'
 ---
