--- a/_publications/2020-01-01-hue2020fourth.md
+++ b/_publications/2020-01-01-hue2020fourth.md
@@ -7,3 +7,5 @@ venue: 'Preprint on Arxiv'
 paperurl: 'https://arxiv.org/pdf/2007.05308.pdf'
 ---
 Chau et al. [New J. Phys. 20, 073003 (2018)] presented a new and straight-forward derivation of a fourth-order approximation $U_7$ of the time-evolution operator and hinted at its potential value as a symplectic integrator. $U_7$ is based on the Suzuki-Trotter split-operator method and leads to an algorithm for numerical time propagation that is superior to established methods. We benchmark the performance of  and other algorithms, including a Runge-Kutta method and another recently developed Suzuki-Trotter-based scheme, that are exact up to fourth order in the evolution parameter, against various classical and quantum systems. We find $U_7$ to deliver any given target accuracy with the lowest computational cost, across all systems and algorithms tested here. This study is accompanied by open-source numerical software that we hope will prove valuable in the classroom.
+
+Download it [here](https://arxiv.org/pdf/2007.05308.pdf)
