--- a/_teaching/2021-01-01-CS1010S-tutor.md
+++ b/_teaching/2021-01-01-CS1010S-tutor.md
@@ -3,7 +3,8 @@ title: "Undergraduate Teaching Assistant"
 collection: teaching
 type: "Undergraduate Coding Course"
 permalink: /teaching/CS1010s-tutor
-venue: "National University of Singapore, School of Computing, 2018-2020"
+venue: "National University of Singapore, School of Computing"
+date: 2018-01-01/2020-06-31
 location: "Singapore"
 ---
 
