--- a/RSSFeed/1.md
+++ b/RSSFeed/1.md
@@ -3,5 +3,5 @@ title: "Physical Review Journals Feed"
 collection: RSSFEED
 permalink: /RSSFEED/PRJ_feed
 ---
-
+[comment]: # (This actually is the most platform independent comment) https://rss.bloople.net
 <script src="//rss.bloople.net/?url=http%3A%2F%2Ffeeds.aps.org%2Frss%2Fallsuggestions.xml&showtitle=false&type=js"></script>
