--- a/_posts/2016-08-12.md
+++ b/_posts/2016-08-12.md
@@ -10,8 +10,26 @@ tags:
 Why China’s South China Sea Airfields are Militarily useless.
 ======
 
-You can have many headings
-======
+https://www.theguardian.com/world/2016/apr/18/chinese-military-plane-lands-on-disputed-south-china-sea-island-media
 
-Aren't headings cool?
-------
+For some reason I am greatly irritated when I read articles like this, which show little understanding of military thought or historical analysis. Although the media likes to play up China’s building of airfields as a threat to the US in a militaristic sense, in all honesty and from a close reading of history I seriously doubt that that airfield will pose any threat to the US Pacific Fleet in an event of a war with China.
+
+Captain Mahan once theorised that the main, overarching goal of any naval war was to establish control over the sea lanes to ensure freedom of movement of your battle fleet and merchant fleet over the expanse of the ocean. And to do so you had to completely destroy the opponent’s fleets battle line. By doing so, you would eliminate the opponent’s ability to project force in any meaningful way by denying his ability to engage your fleet. This would cause him to be unable to move out any ships, both military and civilian/merchant, as he would be engaged by your own battle line and, since his battle line was crippled/non-existent, he would just lose any fight without any gain. In so doing, you leave your opponent bottled up within his ports, and your battle line is now free to act against any commerce raiding submarines/secondary strikes and objectives without fear of the opponent’s battle fleet. To achieve this goal, all other strategic goals are secondary. Sea bases and ports are only useful insofar as to provide a closer base of operations for your battle line, to be able to operate with a shorter logistical trail, which would enable it to be less vulnerable. There is no inherent value in a Sea base, UNLESS it severely restricts the freedom of movement of fleets by virtue of its position. Gibraltar is a very good example of this as its geographical position makes it impossible for any fleet to enter the Mediterranean without succumbing to fire by shore batteries and air strikes from Gibraltar.
+
+In his day, this battle line consisted of the heaviest battleships, as they were the ships with the most firepower. In a straight up fight, nothing could go toe to toe with those battleships. By World War II, this had evolved into the aircraft carrier, as exemplified by the Japanese Kido Butai’s strike on Pearl Harbour and the sinking of the Prince of Wales and Repulse. This was not because the aircraft carrier had much more striking power, as the biggest dive bomber or torpedo still could not pack a punch equivalent to a 16-inch shell fired from a battleship like the Yamato. The aircraft carrier was the new “King of the Sea” because its planes could hit ships at ranges of hundreds of kilometres while a battleship had to close to within 20-30 kilometres before its guns were in range of the enemy ships. And any battleship (or indeed, any ship) that tried to close the gap to engage the enemy carriers would get hit by squadron after squadron of planes launched from the aircraft carrier that were almost guaranteed to damage or sink the ship in question if the aircraft carrier could maintain contact with the ship (eg. They had to ensure that they could continuously track the ships position, either by direct reconnaissance by planes or by radar so that they could sail away from the approaching ships and keep directing their strike planes to the correct location to hit the ship).
+
+Now we come to the concept of “Unsinkable Aircraft Carriers”, which is another name for all these airfields on islands in the middle of the pacific that could act as aircraft carriers, but like its name suggest, could not be sunk. World War II is rife with examples of this, with the islet of Midway being quite famous due to the battle named after it. The idea is that these islands and their airbases could be used as jumping off points/forward supply bases for island hopping campaigns, and the Japanese and Americans could position aircraft there to engage any enemy fleet that came nearby. And in a straight up fight, an air squadron positioned on an island would trump an air squadron positioned on a carrier as the carrier could be much more easily put out of commission or sunk, preventing its use any more (or until it was repaired).
+
+But remember, there is one problem with an “Unsinkable Aircraft Carrier”, which is that it is immobile. What this means is that it is only useful in projecting force in a certain radius around it, and it by itself cannot achieve the ultimate goal of establishing control over the ocean. Any fleet could avoid its striking radius and continue to move uninhibited around the sea. Mahan would say that yes, islands are nice to control, but they are ultimately not the primary objective, which is the battle fleet (and more precisely, the ship that provides the main projector of force, the aircraft carrier). The Japanese made this strategic error very obviously during the Battle of Midway, where in their rush to strike at the airfield on Midway, they missed an opportunity to strike at the American carriers, and indeed, left themselves open to a strike from those aforementioned American carriers. After these losses, the Imperial Japanese Navy was severely crippled in its ability to project force in the Pacific Ocean any longer, and was forced to cede the strategic initiative to the Americans.
+
+Also, while an island is unsinkable, it does not mean that its airfield and runway is immortal. An airfield can still be hit by battleships or aircraft based aviation to put it out of commission by damaging runways and destroying maintenance, command and control, and supply facilities, of which without, planes would be unable to operate. During the battle of Guadalcanal, the Japanese managed to sneak in the battleships Haruna and Kongo to bombard Henderson Field. Although it was repaired by the Americans, it demonstrated that these air bases were still vulnerable. 
+
+And this is further compounded by the islands inability to move. Whereas aircraft carriers can move to evade enemy detection, and reposition themselves as to make the enemy uncertain of their whereabouts, enemy fleets will always be certain about the whereabouts of islands, which make them vulnerable to enemy strike plans. Imagine a situation where you are hit by wave after wave of carrier strike planes, while your own planes based on your island air base are unable to strike back because you are unable to ascertain the position of the enemy fleet. This also greatly simplifies enemy fleet plans, as there is much less uncertainty on your part.
+
+Now let’s return to the present day. China currently only has plans to construct and maintain 3 aircraft carriers, while the US is guaranteed to maintain 10 carriers. In the event of a war, the US carriers will surely concentrate before moving to precipitate a decisive fleet action in the Pacific. Even allowing for a few carriers positioned in other theatres due to political considerations, maybe 1 in the Atlantic, one in the Gulf and 1 in the Indian Sea, that still leaves it 7 carriers. Let’s say that the US fleet successfully concentrates before moving towards the South China Sea. How does China intend to engage this fleet? The US fleet has so many opportunities to precipitate a major fleet action without even betting into range of the Chinese land based aviation on the Spratleys. They could cut off the supply lines between the Spratleys and the Chinese mainland, interdicting any reinforcements or supply ships plying the route between them, and conduct merchant raiding on any merchant ships bound for China. They could conduct port strikes on Chinese naval bases, or strike at major Chinese coastal cities like Shanghai (but this is militarily riskier). Or, they could just hit the Spratleys in full force. Even if all 3 Chinese carriers are there to support the air bases in this major battle, the US still have an overwhelming numerical advantage. And the US would have the operational initiative, as the Chinese carriers would have to sit somewhere safe as moving to engage the US Fleet in open seas is suicidal (remember, 7-10 carriers to 3).
+
+And lets say the US decided to just engage the Chinese fleets and the Spratley air bases at the same time. The US can afford (well, militarily afford, I’m not sure about politically afford) to lose almost all their carriers, as long as they destroy the 3 Chinese carriers. Remember, once those 3 carriers are gone, the Chinese lose any ability to project force to threaten the US fleet, or any nations that they might be planning to attack (Philippines) with the exception of Taiwan (due to Taiwan being too close to China). Once those 3 carriers are gone, the US fleet can move out of strike range of the Spratley air bases, and poke at them with their strike aircraft, destroying their runways and facilities, making it impossible for any aircraft to realistically operate from those air bases. 
+
+And even better, they now have a free hand in destroying any attempts to resupply the Chinese forces and personnel on the Spratleys. (Which incidentally, is what the marines feared at Guadalcanal, that the Jap fleet would drive out the US fleet in close support and prevent resupply of the Marine division on Guadalcanal). What this looks like is not unlike the encirclement of the Egyptian Third Army during the Yom Kippur war, where the Israeli Army cut off supplies to the Egyptian Third Army, using it as a bargaining chip to end the war. Once the Chinese forces and personnel on the Spratleys is cut off and starving and begging for fresh water, with no hope of relief due to the US carriers dominating the sea and air approaches to the Spratleys, they will realise how meaningless their airfields are in the event of an actual war.
+
+(Note: I did leave out the Chinese developments in land-based Anti-Ship Missiles, but seeing as they are still unproven, especially in detecting a carrier that is actively trying to avoid being detected, and the developments in the Aegis Missile Defence system and the Ticonderoga Cruisers and Arleigh Burke Destroyers, I can’t predict their use in being able to destroy the US carriers)
