--- a/_posts/2016-08-12-blog-post-1.md
+++ b/_posts/2016-08-12-blog-post-1.md
@@ -1,7 +1,7 @@
 ---
 title: 'Chinese Air Bases in the Spratleys'
 date: 2016-08-02
-permalink: /posts/2016/08/02/
+permalink: /posts/2016/08/02/blog-post-1/
 tags:
   - Current Affairs
   - History
