--- a/_publications/2022-04-07-lau2022convex.md
+++ b/_publications/2022-04-07-lau2022convex.md
@@ -2,9 +2,9 @@
 title: "Convex optimization for non-equilibrium steady states on a hybrid quantum processor"
 collection: publications
 permalink: /publication/lau2022convex
-date: 2022-04-07
-venue: 'Preprint on Arxiv'
-paperurl: 'https://arxiv.org/pdf/2204.03203.pdf'
+date: 2023-06-23
+venue: 'Physical Review Letters 130, 240601'
+paperurl: 'https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.130.240601'
 ---
 Finding the transient and steady state properties of open quantum systems is a central problem in various fields of quantum technologies. Here, we present a quantum-assisted algorithm to determine the steady states of open system dynamics. By reformulating the problem of finding the fixed point of Lindblad dynamics as a feasibility semi-definite program, we bypass several well known issues with variational quantum approaches to solving for steady states. We demonstrate that our hybrid approach allows us to estimate the steady states of higher dimensional open quantum systems and discuss how our method can find multiple steady states for systems with symmetries.
 
